--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: lcopula
 Type: Package
 Title: Liouville Copulas
-Version: 1.0
-Date: 2017-01-23
+Version: 1.0.1
+Date: 2017-03-05
 Authors@R: c(person("Leo", "Belzile", role = c("aut", "cre"),
                      email = "leo.belzile@epfl.ch"),
               person("Christian", " Genest", role = c("aut","ctb")),
               person("Alexander", "J. McNeil", role = c("ctb")),
               person("Johanna", "G. Neslehova", role = c("ctb")))
 Description: Collections of functions allowing random number generations and
-    estimation of Liouville copulas.
+    estimation of 'Liouville' copulas.
 License: GPL-3
 Imports:
     Rcpp (>= 0.11.4),
@@ -21,4 +21,4 @@ Depends:
     copula (>= 0.999-12),
     R (>= 2.12.0)
 LinkingTo: Rcpp
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
