--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: R
-sudo: false
+before_install:
+- sudo apt-get install libgsl-dev libgsl2
 cache: packages
