--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: lcopula
 Type: Package
 Title: Liouville Copulas
-Version: 1.0.2
-Date: 2018-06-08
+Version: 1.0.3
+Date: 2019-06-09
 Authors@R: c(person("Leo", "Belzile", role = c("aut", "cre"),
                      email = "belzilel@gmail.com"),
               person("Christian", " Genest", role = c("aut","ctb")),
@@ -22,4 +22,5 @@ Depends:
     copula (>= 0.999-12),
     R (>= 2.12.0)
 LinkingTo: Rcpp
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
+Encoding: UTF-8
