--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: lcopula
 Type: Package
 Title: Liouville Copulas
-Version: 1.0.4
-Date: 2019-07-06
+Version: 1.0.5
+Date: 2022-04-25
 Authors@R: c(person("Leo", "Belzile", role = c("aut", "cre"), email = "belzilel@gmail.com", comment = c(ORCID = "0000-0002-9135-014X")),
               person("Christian", " Genest", role = c("aut","ctb")),
               person("Alexander", "J. McNeil", role = "ctb"),
@@ -13,14 +13,15 @@ License: GPL-3
 BugReports: https://github.com/lbelzile/lcopula/issues
 Imports:
     Rcpp (>= 0.11.4),
-    pcaPP,
     utils,
     graphics,
     stats
 Depends:
     copula (>= 0.999-12),
     R (>= 2.12.0)
+Suggests:
+    wdm
 LinkingTo: Rcpp
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.2
 Encoding: UTF-8
 LazyData: true
